--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "server.js"
   ],
   "dependencies": {
+    "fs-extra": "^10.0.0",
     "http-proxy": "1.11.1",
+    "path": "^0.12.7",
     "proxy-from-env": "0.0.1"
   },
   "devDependencies": {
